# rydeen

./: .clang-format  .gitignore  README.md  config.yml  meson.build  rydeen.service
src/: action.c  action.h  array.h  config.c  config.h  gesture_consumer.c  gesture_consumer.h  key_consumer.c  key_consumer.h  meson.build  rydeen.c  rydeen.h  uinput.c  uinput.h  util.c  util.h
